--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,15 @@
 
-html, body {
+/*--------------GLOBAL STYLES------------*/
+body {
     height: 100%;
-    width: 100%;
+	width: 100%;
 }
+
+/*--------------NAV STYLES---------------*/
+
+/* header { 
+	position: absolute;
+} */
 
 nav {
 	background-color: #262C3A;
@@ -12,10 +19,14 @@ nav {
 	color: white;
 }
 
-/* .pages {
-	width: 100%;
-	height: 550px;
-} */
+/*------------PAGE STYLES-----------------*/
+
+.page-header {
+	font-size: 40px;
+	color: black;
+}
+
+/*-----------------PAGE 1------------------*/
 
 #logo {
 	display: block;
@@ -24,30 +35,114 @@ nav {
 	width: 50%;
 }
 
-.page-header {
-	font-size: 40px;
-	color: black;
-	/* margin-left: auto;
-	margin-right: auto; */
-}
+/*---------------NEWS STYLES---------------*/
 
 .promo {
-	background-color: white;
-	display: block;
+	background-color: #f5f5f5;
 }
 
-.promo > div > img {
-	margin: 10px;*/
+.promo > img {
+	margin: 20px;
 }
 
-.promo > div > p {
-	margin: 5px;
+.promo > p {
+	margin: 15px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
-/* .menu-header {
-	margin-left: auto;
-	margin-right: auto; */
+.promo-1 {
+	
 }
+
+.promo-1 > img {
+	float: left;
+}
+
+.promo-2 {
+
+}
+
+.promo-2 > img {
+	border-radius: 50%;
+}
+
+.promo-2 > p {
+	background-color: #f5f5f5;
+}
+
+.promo-2-grid {
+	display: grid;
+	grid-template-rows: repeat(2, 1fr);
+	grid-template-columns: repeat(4, 1fr);
+	width: 20vw;
+	height: 20vh;
+	@media screen and (max-width: 60em) {
+	  grid-template-rows: repeat(4, 1fr);
+	}
+}
+
+.promo-2-grid > .grid-1 {
+	margin: 0;
+	background-color: red;
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row: 1;
+	@media screen and (max-width: 60em) {
+	  grid-column-start: 1;
+	  grid-column-end: 5;
+	  grid-row: 1;
+	}
+}
+  
+.promo-2-grid > .grid-2 {
+	margin: 0;
+	background-color: green;
+	grid-column-start: 3;
+	grid-column-end: 5;
+	grid-row: 1;
+	@media screen and (max-width: 60em) {
+	  grid-column-start: 1;
+	  grid-column-end: 5;
+	  grid-row: 2;
+	}
+}
+  
+.promo-2-grid > .grid-3 {
+	margin: 0;
+	background-color: orange;
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row: 2;
+	@media screen and (max-width: 60em) {
+	  grid-column-start: 1;
+	  grid-column-end: 5;
+	  grid-row: 3;
+	}
+}
+  
+.promo-2-grid > .grid-4 {
+	margin: 0;
+	background-color: aqua;
+	grid-column-start: 3;
+	grid-column-end: 5;
+	grid-row: 2;
+	@media screen and (max-width: 60em) {
+	  grid-column-start: 1;
+	  grid-column-end: 5;
+	  grid-row: 4;
+	}
+}
+
+.promo-3 {
+
+}
+
+.promo-4 {
+
+}
+
+/*------------PARALLAX STYLES------------*/
 
 .parallax {
     min-height: 100%;
@@ -85,6 +180,8 @@ nav {
 	/* background-image: url(""); */
 	background-color: orange;
 }
+
+/*---------------FOOTER STYLES--------------*/
 
 .footer {
 	position: absolute;
